# bbqr-ffi

./: .gitignore  Justfile  LICENSE  README.md
bbqr-android/: README.md  build.gradle.kts  gradle.properties  justfile  local.properties  settings.gradle.kts
bbqr-android/lib/: build.gradle.kts  proguard-rules.pro
bbqr-android/plugins/: README.md  build.gradle.kts
bbqr-ffi/: Cargo.toml  README.md  justfile  uniffi.toml
bbqr-ffi/src/: error.rs  join.rs  lib.rs  split.rs  types.rs
bbqr-swift/: .gitignore  Package.swift  Package.swift.txt  build.sh  justfile
bbqr-swift/Bbqr.xcframework/: Info.plist
bbqr-swift/Bbqr.xcframework/ios-arm64/bbqrffiFFI.framework/: Info.plist
bbqr-swift/Bbqr.xcframework/ios-arm64_x86_64-simulator/bbqrffiFFI.framework/: Info.plist
bbqr-swift/Bbqr.xcframework/macos-arm64_x86_64/bbqrffiFFI.framework/: Info.plist
bbqr-swift/Sources/Bbqr/: Bbqr.swift
bbqr-swift/Tests/bbqr-swiftTests/: bbqr_swiftTests.swift
bbqr-swift/bbqrFFI.xcframework/: Info.plist
bbqr-swift/bbqrFFI.xcframework/ios-arm64/bbqr.framework/: Info.plist
bbqr-swift/bbqrFFI.xcframework/ios-arm64_x86_64-simulator/bbqr.framework/: Info.plist
bbqr-swift/bbqrFFI.xcframework/macos-arm64_x86_64/bbqr.framework/: Info.plist
bbqr-swift/bbqrffiFFI.xcframework/ios-arm64/bbqrffiFFI.framework/: Info.plist
examples/android/: .envrc.example  settings.gradle.kts
examples/android/app/: build.gradle.kts
examples/android/gradle/: libs.versions.toml
examples/android/gradle/wrapper/: gradle-wrapper.properties
examples/apple-multiplatform-spm/QrDemo/QrDemo/: QrDemoApp.swift  (+1 more)
(+47 files in other folders)
